--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,4 +1,6 @@
 ---
+# Install and setup nginx
+# http://uwsgi-docs.readthedocs.org/en/latest/tutorials/Django_and_nginx.html
 
 - name: Updating apt cache and installing python
   apt: name=python state=latest update_cache=yes
@@ -38,10 +40,22 @@
   shell: echo 'STATIC_ROOT = os.path.join(BASE_DIR, "static/")' >> /home/vagrant/mysite/mysite/settings.py
 
 - name: Running collectstatic
-  shell: python /home/vagrant/mysite/manage.py collectstatic
+  django_manage: command=collectstatic app_path=/home/vagrant/mysite
 
 - name: Setting up test.py
   copy: src=test.py dest=/home/vagrant/mysite
 
+- name: Setting up mysite_uwsgi.ini
+  copy: src=mysite_uwsgi.ini dest=/home/vagrant/mysite
+
 - name: Start nginx
   service: name=nginx state=restarted
+
+# Setup emperor mode
+# # create a directory for the vassals
+# sudo mkdir /etc/uwsgi
+# sudo mkdir /etc/uwsgi/vassals
+# # symlink from the default config directory to your config file
+# sudo ln -s /path/to/your/mysite/mysite_uwsgi.ini /etc/uwsgi/vassals/
+# # run the emperor
+# sudo uwsgi --emperor /etc/uwsgi/vassals --uid root --gid root
